methods and data transfer object's annotates set with attribute
